1.14.3
------

1.14.2
------
(RB=264174)
Increment parseq version which removes unservable files from the tracevis tar ball.

(RB=264173)
Use ProtocolVersionUtil to get protocol version in ErrorResponseBuilder.

1.14.1
------
(RB=262805)
Adding set method for Rest.li debug request handlers on Rest.li server config.

(RB=262459)
Adding a temporary fix to ignore the unused folders in the parseq-tracevis artifact in maven central.

(RB=260228)
Adding debug request handler support to Rest.Li. Introducing a new debug request handler: Parseq Trace Debug Request Handler.

(RB=261581)
Fix header display bug in docgen resource page.

1.14.0
------
(RB=258481)
Create enum for Rest.li protocol versions.

(RB=258219)
Replace hand written data templates with generated ones.

(RB=259104)
Move AllProtocolVersions from com.linkedin.restli.common.internal to com.linkedin.restli.internal.common.

(RB=258733)
Fail fast when a server receives a request from a client that is encoding using a Rest.li protocol that the server does not support.

(RB=256518)
Rename X-Linkedin headers (ID and ErrorResponse) to X-RestLi headers.

(RB=261288)
Change zookeeperAnnouncer's markdown() name and implementation so its action is easier to understand

(RB=261502)
Shorten the logging in d2 state to be more readable + changed the interface of D2 strategy Jmx

(RB=261855)
Make the error details optional in an ErrorResponse to be consistent with previous behavior

1.13.5
------
(RB=257823)
Fix for getting the uri in ScatterGatherBuilder and GetAllPartitionsRequestBuilder if the legacy constructor is used.

1.13.4
------
(RB=257238)
Fix memory leaks from CopyFilter.

1.13.3
------
(RB=251559)
Add scaladoc support to Rest.li IDL generation.

(RB=256825)
Fixed a bug where if the deprecated constructor + D2 is used then getting the protocol version will fail in the RestClient as "d2://" is not a valid URI.

1.13.2
------
(RB=254542)